--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,5 +1,6 @@
 body{
 	margin-bottom: 100px;
+	margin-top: 100px;
 }
 .homework-image{
 	width: 450px;
@@ -13,7 +14,54 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 }
+.intro-content{
+	/*max-height: 400px;
+	height: 400px;
+	min-height: 400px;*/
+	background-color: rgba(0,0,0,0.2);
+	font-size: 70px;
+	#padding: 10px;
+}
+.intro-content>div>img{
+	#float:left;
+	max-height: 400px;
+	height: 400px;
+	min-height: 400px;
+	padding: 10px;
+}
+div.left{text-align: left;padding-left: 15px;}
+div.right{text-align: right;padding-right: 15px;}
+
+.intro-content>div.a>img{
+	float:left;
+}
+.intro-content>div.b>img{
+	float:right;
+}
+
+
+
+
+
+
+
+
 /*.services{
 background-color: black;
 width:450px;
+}*/
+/* NAVBAR HIEGHT ADJUSTMENT */
+/*.navbar > .container-fluid,
+.navbar > .container-fluid > .navbar-header{
+	height: 100%;
+}
+.navbar{
+	height:60px;
+}
+ul.nav,
+ul.navbar-nav,
+ul.nav>li,
+ul.navbar-nav>li,
+{
+	height: 60px;
 }*/
