--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -18,9 +18,17 @@ body{
 	/*max-height: 400px;
 	height: 400px;
 	min-height: 400px;*/
-	background-color: rgba(0,0,0,0.2);
+	background-color: rgba(200,200,200,1);
 	font-size: 70px;
 	#padding: 10px;
+	overflow: auto;
+}
+/*div.container> a{
+	color: black;
+}*/
+div.container> a,div.container> a:hover,div.container> a:active{
+	color: rgba(250,250,250,1);
+	text-decoration: none;
 }
 .intro-content>div>img{
 	#float:left;
@@ -28,18 +36,27 @@ body{
 	height: 400px;
 	min-height: 400px;
 	padding: 10px;
+	
 }
-div.left{text-align: left;padding-left: 15px;}
-div.right{text-align: right;padding-right: 15px;}
-
+div.left>div.heading{text-align: left;padding-left: 15px;}
+div.right>div.heading{text-align: right;padding-right: 15px;}
+.intro-content>div.a{
+	float:left;
+	overflow: auto;
+}
+.intro-content>div.b{
+	float:right;
+	overflow: auto;
+}
 .intro-content>div.a>img{
 	float:left;
 }
 .intro-content>div.b>img{
 	float:right;
 }
-
-
+div.heading{
+	background-color: rgba(100,100,100,1);
+}
 
 
 
